add D-logo and the mouse-click-logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 </head>
 </head>
 <body>
-    
+    <header>
+        <img src="resources/icons/D-logo.png">
+        <h1>WELCOME TO DELANI STUDIO</h1>
+        <H6>Amazing people are making amazing designs in a fun environment</H6>
+        <img src="resources/icons/mouse_click.png">
+    </header>
 </body>
 </html>
