add about section

--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
         <H6>Amazing people are making amazing designs in a fun environment</H6>
         <img src="resources/icons/mouse_click.png">
     </header>
+    <div>
+        <h3>ABOUT US</h3>
+        <p>When you work with us, you are part of a team of committed collaborators. 
+           All aspects of our software development process are integrated, interactive and agile.</p>
+        <p>Our approach unifies design, development and management to create exceptional products.</p>
+        <p>We start each project by understanding your business goals, the user's needs and the product requirements.</p>
+        <p>Then we help translate them into effective and elegant solutions.</p>
+    </div>
 </body>
 </html>
