--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
         <p>We start each project by understanding your business goals, the user's needs and the product requirements.</p>
         <p>Then we help translate them into effective and elegant solutions.</p>
     </div>
+    <div id="services">
+        <h3>SERVICES</h3>
+        <p>Before we write a line of code, our team will spend the necessary time needed to understand your product vision.</p>
+        <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
+        <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+    </div>
 </body>
 </html>
