add what we do and contact section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <header>
         <img src="resources/icons/D-logo.png">
-        <h1>WELCOME TO DELANI STUDIO</h1>
-        <H6>Amazing people are making amazing designs in a fun environment</H6>
+        <h1>WELCOME<br><br>TO DELANI STUDIO</h1>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
         <img src="resources/icons/mouse_click.png">
     </header>
-    <div>
+    <div class="container">
         <h3>ABOUT US</h3>
         <p>When you work with us, you are part of a team of committed collaborators. 
            All aspects of our software development process are integrated, interactive and agile.</p>
@@ -34,6 +34,30 @@
         <p>Before we write a line of code, our team will spend the necessary time needed to understand your product vision.</p>
         <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
         <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+    </div>
+    <div class="container">
+        <div>
+            <h3>WHAT WE DO</h3>
+            <img src="resources/icons/design_icon.png">
+            <img src="resources/icons/dev_icon.png">
+            <img src="resources/icons/product_icon.png">
+        </div>
+        <div>
+            <h3>PORTFOLIO</h3>
+        </div>
+    </div>
+    <div id="contact">
+        <h3>CONTACT US</h3>
+        <form>
+            <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="First name">
+            </div>
+            <div class="col">
+                <input type="email" class="form-control" placeholder="Email...">
+            </div>
+            </div>
+        </form>
     </div>
 </body>
 </html>
