add images in the portfolio section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
         </div>
         <div>
             <h3>PORTFOLIO</h3>
+            <img src="resources/images/work1.jpg">
+            <img src="resources/images/work2.jpg">
+            <img src="resources/images/work3.jpg">
+            <img src="resources/images/work4.jpg">
+            <img src="resources/images/work5.jpg">
+            <img src="resources/images/work6.jpg">
+            <img src="resources/images/work7.jpg">
+            <img src="resources/images/work8.jpg">
         </div>
     </div>
     <div id="contact">
