add changes to what we do section

--- a/index.html
+++ b/index.html
@@ -36,23 +36,54 @@
         <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
     </div>
     <div class="container">
-        <div>
+        <div class="row">
             <h3>WHAT WE DO</h3>
-            <img src="resources/icons/design_icon.png">
-            <img src="resources/icons/dev_icon.png">
-            <img src="resources/icons/product_icon.png">
+            <div class="col-md-4">
+                <div id="design-hide">
+                    <img src="resources/icons/design_icon.png">
+                </div>
+                <div id="design-show">
+                    <h5>Design</h5>
+                    <p>Our design practice offers a full range of services including brand strategy, 
+                    interaction and visual design and user experience testing. Throughout your project, 
+                    our designers create and implement visual design and workflows, 
+                    solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="dev-hide">
+                    <img src="resources/icons/dev_icon.png">
+                </div>
+                <div id="dev-show">
+                    <h5>Development</h5>
+                    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. 
+                    They collaborate with your team to write, and improve code on a daily basis, 
+                    using proven practices such as test-driven development and pair programming.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="product-hide">
+                    <img src="resources/icons/product_icon.png">
+                </div>
+                <div id="product-show">
+                    <h5>Product Management</h5>
+                    <p>Planning and development is iterative. Because we are constantly coding and testing, 
+                    the products we build are always ready to go live. 
+                    This iterative process allows for changes as business requirements evolve.</p>
+                </div>
+            </div>
         </div>
-        <div>
-            <h3>PORTFOLIO</h3>
-            <img src="resources/images/work1.jpg">
-            <img src="resources/images/work2.jpg">
-            <img src="resources/images/work3.jpg">
-            <img src="resources/images/work4.jpg">
-            <img src="resources/images/work5.jpg">
-            <img src="resources/images/work6.jpg">
-            <img src="resources/images/work7.jpg">
-            <img src="resources/images/work8.jpg">
-        </div>
+    </div>
+    <div class="container">
+        <h3>PORTFOLIO</h3>
+        <img src="resources/images/work1.jpg">
+        <img src="resources/images/work2.jpg">
+        <img src="resources/images/work3.jpg">
+        <img src="resources/images/work4.jpg">
+        <img src="resources/images/work5.jpg">
+        <img src="resources/images/work6.jpg">
+        <img src="resources/images/work7.jpg">
+        <img src="resources/images/work8.jpg">
     </div>
     <div id="contact">
         <h3>CONTACT US</h3>
