--- a/index.html
+++ b/index.html
@@ -15,88 +15,138 @@
 </head>
 </head>
 <body>
-    <header>
-        <img src="resources/icons/D-logo.png">
-        <h1>WELCOME<br><br>TO DELANI STUDIO</h1>
-        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-        <img src="resources/icons/mouse_click.png">
-    </header>
-    <div class="container">
-        <h3>ABOUT US</h3>
-        <p>When you work with us, you are part of a team of committed collaborators. 
-           All aspects of our software development process are integrated, interactive and agile.</p>
-        <p>Our approach unifies design, development and management to create exceptional products.</p>
-        <p>We start each project by understanding your business goals, the user's needs and the product requirements.</p>
-        <p>Then we help translate them into effective and elegant solutions.</p>
-    </div>
-    <div id="services">
-        <h3>SERVICES</h3>
-        <p>Before we write a line of code, our team will spend the necessary time needed to understand your product vision.</p>
-        <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
-        <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
-    </div>
-    <div class="container">
-        <div class="row">
-            <h3>WHAT WE DO</h3>
-            <div class="col-md-4">
-                <div id="design-hide">
-                    <img src="resources/icons/design_icon.png">
-                </div>
-                <div id="design-show">
-                    <h5>Design</h5>
-                    <p>Our design practice offers a full range of services including brand strategy, 
-                    interaction and visual design and user experience testing. Throughout your project, 
-                    our designers create and implement visual design and workflows, 
-                    solicit user feedback and work with you to make sure what gets built is what is needed.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div id="dev-hide">
-                    <img src="resources/icons/dev_icon.png">
-                </div>
-                <div id="dev-show">
-                    <h5>Development</h5>
-                    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. 
-                    They collaborate with your team to write, and improve code on a daily basis, 
-                    using proven practices such as test-driven development and pair programming.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div id="product-hide">
-                    <img src="resources/icons/product_icon.png">
-                </div>
-                <div id="product-show">
-                    <h5>Product Management</h5>
-                    <p>Planning and development is iterative. Because we are constantly coding and testing, 
-                    the products we build are always ready to go live. 
-                    This iterative process allows for changes as business requirements evolve.</p>
-                </div>
-            </div>
+    <div class="container-fluid">
+        <div class="landing-page">
+          <img src="resources/icons/D-logo.png" class="logo"/>
+          <h1>
+            WELCOME<br/><br/>TO DELANI STUDIO
+          </h1>
+          <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+          <div>
+            <a href="#about" ><img src="resources/icons/mouse_click.png" class="mouse"></a>
+          </div>
         </div>
-    </div>
-    <div class="container">
-        <h3>PORTFOLIO</h3>
-        <img src="resources/images/work1.jpg">
-        <img src="resources/images/work2.jpg">
-        <img src="resources/images/work3.jpg">
-        <img src="resources/images/work4.jpg">
-        <img src="resources/images/work5.jpg">
-        <img src="resources/images/work6.jpg">
-        <img src="resources/images/work7.jpg">
-        <img src="resources/images/work8.jpg">
-    </div>
-    <div id="contact">
-        <h3>CONTACT US</h3>
-        <form>
-            <div class="row">
-            <div class="col">
-                <input type="text" class="form-control" placeholder="First name">
+        <div class="container" id="about">
+          <h2>ABOUT US</h2>
+          <p>
+            When you work with us, you are part of a team of committed
+            collaborators. All aspects of our software development process are
+            integrated, interactive and agile.
+          </p>
+          <p>
+            Our approach unifies design, development and management to create
+            exceptional products.
+          </p>
+          <p>
+            We start each project by understanding your business goals,the user's
+            needs and the product requirements.
+          </p>
+          <p>then we help translate them into effective and elegant solutions.</p>
+        </div>
+  
+        <div class="services">
+          <H2>SERVICES</H2>
+          <p>
+            Before we write a line of code, our team will spend the necessary time
+            needed to understand your product vision.
+          </p>
+          <p>
+            The outcome of this scoping session is a proposal or high-level
+            statement of work.
+          </p>
+          <p>
+            Based on your requirements, we can provide a complete offering or just
+            the pieces you need.
+          </p>
+        </div>
+        <div class="container">
+          <h3>WHAT WE DO</h3>
+          <div class="row">
+            <div class="col-md-4 text-center">
+              <img id="icon" class="click" src="resources/icons/design_icon.png" />
+              <h5>DESIGN</h5>
+              <div id="hide">
+                <p class="clickable">
+                  Our design practice offers a full range of services including
+                  brand strategy,interaction and visual design and user experience
+                  testing.<br> Throughout your project,our designers create and
+                  implement visual design and workflows,solicit user feedback and
+                  work with you to make sure what gets built is what is needed.
+                </p>
+              </div>
             </div>
-            <div class="col">
-                <input type="email" class="form-control" placeholder="Email...">
+            <div class="col-md-4 text-center">
+              <img id="icon1" class="click1" src="resources/icons/dev_icon.png"/>
+              <h5>DEVELOPMENT</h5>
+              <div id="hide1">
+                <p class="clickable1">
+                  All engineers are fluent in the latest enterprise, mobile and
+                  web development technologies. <br>They collaborate with your team to
+                  write, and improve code on a daily basis, using proven practices
+                  such as test-driven development and pair programming.
+                </p>
+              </div>   
             </div>
-            </div>
-        </form>
-    </div>
+            <div class="col-md-4 text-center">
+              <img id="icon2" class="click2" src="resources/icons/product_icon.png"/>
+                <h5>PRODUCT MANAGEMENT</h5>
+              <div id="hide2">
+                  <p class="clickable2">
+                      Planning and development is iterative. Because we are constantly
+                      coding and testing, the products we build are always ready to go
+                      live.<br> This iterative process allows for changes as business
+                      requirements evolve.
+                  </p>
+              </div>
+          </div>
+        </div>
+        </div>
+        <div class="container">
+          <div id="portfolio">
+              <h1 class="text-center">PORTFOLIO</h1>
+                <div class="row">
+                  <div id="work4" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay mt-3">Project one</div></div>
+                  <div id="work3" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay3 mt-3">Project Two</div></div>
+                  <div id="work2" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay2 mt-3">Project Three</div></div>
+                  <div id="work1" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay1 mt-3">Project Four</div></div>
+                </div>
+                <br>
+                <div class="row">
+                  <div id="work5" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay5 mt-3">Project Five</div></div>
+                  <div id="work6" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay6 mt-3">Project Six</div></div>
+                  <div id="work7" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay7 mt-3">Project Seven</div></div>
+                  <div id="work8" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay8 mt-3">Project Eight</div></div>
+                </div>
+          </div>
+        </div>
+        <div class="container-fluid contact-us">
+          <h3 class="form-heading pt-5 text-white">CONTACT US</h3>
+          <div class="container user-info">
+            <input type="text" id="name" class="text-white" placeholder="Name..." required>
+            <input type="text" id="email" placeholder="Email..." required>
+          </div>
+          <div class="message-div">
+            <textarea name="message" id="message" cols="80" rows="10" placeholder="Your message here..." required></textarea>
+          </div>
+          <button id="btn" onclick="javascript:alert('We have received your message. Thank you for reaching out to us. ')"></button>
+        </div>
+      <div class="container text-center">
+        <div class="social-media">
+          <img src="resources/icons/behance.png">
+          <img src="resources/icons/dribble.png">
+          <img src="resources/icons/facebook.png">
+          <img src="resources/icons/flickr.png">
+          <img src="resources/icons/g_plus.png">
+          <img src="resources/icons/pinterest.png">
+          <img src="resources/icons/skype.png">
+          <img src="resources/icons/stumble_upon.png">
+          <img src="resources/icons/twitter.png">
+          <img src="resources/icons/you_tube.png">
+       </div>
+       <footer>DELANI STUDIO <br> &copy2019</footer>
+      </div>
+      
+   </div>           
+      </div>
 </body>
 </html>
