add changes to remove errors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani Studio</title>
-    <script src="JS/jquery-3.5.1.js"
-            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-            crossorigin="anonymous"></script>
-    <script src="JS/script.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
           crossorigin="anonymous">
@@ -28,36 +24,24 @@
         </div>
         <div class="container" id="about">
           <h2>ABOUT US</h2>
-          <p>
-            When you work with us, you are part of a team of committed
+          <p>When you work with us, you are part of a team of committed
             collaborators. All aspects of our software development process are
-            integrated, interactive and agile.
-          </p>
-          <p>
-            Our approach unifies design, development and management to create
-            exceptional products.
-          </p>
-          <p>
-            We start each project by understanding your business goals,the user's
-            needs and the product requirements.
-          </p>
-          <p>then we help translate them into effective and elegant solutions.</p>
+            integrated, interactive and agile.</p>
+          <p>Our approach unifies design, development and management to create
+            exceptional products.</p>
+          <p>We start each project by understanding your business goals,the user's
+            needs and the product requirements.</p>
+          <p>Then we help translate them into effective and elegant solutions.</p>
         </div>
   
         <div class="services">
           <H2>SERVICES</H2>
-          <p>
-            Before we write a line of code, our team will spend the necessary time
-            needed to understand your product vision.
-          </p>
-          <p>
-            The outcome of this scoping session is a proposal or high-level
-            statement of work.
-          </p>
-          <p>
-            Based on your requirements, we can provide a complete offering or just
-            the pieces you need.
-          </p>
+          <p>Before we write a line of code, our team will spend the necessary time
+            needed to understand your product vision.</p>
+          <p>The outcome of this scoping session is a proposal or high-level
+            statement of work.</p>
+          <p>Based on your requirements, we can provide a complete offering or just
+            the pieces you need.</p>
         </div>
         <div class="container">
           <h3>WHAT WE DO</h3>
@@ -71,32 +55,27 @@
                   brand strategy,interaction and visual design and user experience
                   testing.<br> Throughout your project,our designers create and
                   implement visual design and workflows,solicit user feedback and
-                  work with you to make sure what gets built is what is needed.
-                </p>
+                  work with you to make sure what gets built is what is needed.</p>
               </div>
             </div>
             <div class="col-md-4 text-center">
               <img id="icon1" class="click1" src="resources/icons/dev_icon.png"/>
               <h5>DEVELOPMENT</h5>
               <div id="hide1">
-                <p class="clickable1">
-                  All engineers are fluent in the latest enterprise, mobile and
-                  web development technologies. <br>They collaborate with your team to
+                <p class="clickable1">All engineers are fluent in the latest enterprise, 
+                  mobile and web development technologies. <br>They collaborate with your team to
                   write, and improve code on a daily basis, using proven practices
-                  such as test-driven development and pair programming.
-                </p>
+                  such as test-driven development and pair programming.</p>
               </div>   
             </div>
             <div class="col-md-4 text-center">
               <img id="icon2" class="click2" src="resources/icons/product_icon.png"/>
                 <h5>PRODUCT MANAGEMENT</h5>
               <div id="hide2">
-                  <p class="clickable2">
-                      Planning and development is iterative. Because we are constantly
-                      coding and testing, the products we build are always ready to go
+                  <p class="clickable2">Planning and development is iterative. 
+                    Because we are constantly coding and testing, the products we build are always ready to go
                       live.<br> This iterative process allows for changes as business
-                      requirements evolve.
-                  </p>
+                      requirements evolve.</p>
               </div>
           </div>
         </div>
@@ -105,17 +84,17 @@
           <div id="portfolio">
               <h1 class="text-center">PORTFOLIO</h1>
                 <div class="row">
-                  <div id="work4" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay mt-3">Project one</div></div>
-                  <div id="work3" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay3 mt-3">Project Two</div></div>
-                  <div id="work2" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay2 mt-3">Project Three</div></div>
-                  <div id="work1" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay1 mt-3">Project Four</div></div>
+                  <div id="work4" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay mt-3">Numen Black</div></div>
+                  <div id="work3" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay3 mt-3">Mighty Ontario</div></div>
+                  <div id="work2" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay2 mt-3">Wickidy Doo</div></div>
+                  <div id="work1" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay1 mt-3">Project Brave</div></div>
                 </div>
                 <br>
                 <div class="row">
-                  <div id="work5" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay5 mt-3">Project Five</div></div>
-                  <div id="work6" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay6 mt-3">Project Six</div></div>
-                  <div id="work7" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay7 mt-3">Project Seven</div></div>
-                  <div id="work8" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay8 mt-3">Project Eight</div></div>
+                  <div id="work5" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay5 mt-3">Templates</div></div>
+                  <div id="work6" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay6 mt-3">Project Walace</div></div>
+                  <div id="work7" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay7 mt-3">Wood logo</div></div>
+                  <div id="work8" class="col-md-3 m-2 img-fluid"><div id="overlay" class="overlay8 mt-3">Bailey Wonger</div></div>
                 </div>
           </div>
         </div>
@@ -147,6 +126,10 @@
       </div>
       
    </div>           
-      </div>
+</div>
+<script src="JS/jquery-3.5.1.js"
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+            crossorigin="anonymous"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
