add changes to remove errors

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <div class="container-fluid">
         <div class="landing-page">
-          <img src="/resources/icons/D-logo.png" class="logo"/>
+          <img src="./resources/icons/D-logo.png" class="logo"/>
           <h1>
             WELCOME<br/><br/>TO DELANI STUDIO
           </h1>
           <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
           <div>
-            <a href="#about" ><img src="/resources/icons/mouse_click.png" class="mouse"></a>
+            <a href="#about" ><img src="./resources/icons/mouse_click.png" class="mouse"></a>
           </div>
         </div>
         <div class="container" id="about">
@@ -48,7 +48,7 @@
           <h3>WHAT WE DO</h3>
           <div class="row">
             <div class="col-md-4 text-center">
-              <img id="icon" class="click" src="/resources/icons/design_icon.png" />
+              <img id="icon" class="click" src="./resources/icons/design_icon.png" />
               <h5>DESIGN</h5>
               <div id="hide">
                 <p class="clickable">
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="col-md-4 text-center">
-              <img id="icon1" class="click1" src="/resources/icons/dev_icon.png"/>
+              <img id="icon1" class="click1" src="./resources/icons/dev_icon.png"/>
               <h5>DEVELOPMENT</h5>
               <div id="hide1">
                 <p class="clickable1">All engineers are fluent in the latest enterprise, 
@@ -70,7 +70,7 @@
               </div>   
             </div>
             <div class="col-md-4 text-center">
-              <img id="icon2" class="click2" src="/resources/icons/product_icon.png"/>
+              <img id="icon2" class="click2" src="./resources/icons/product_icon.png"/>
                 <h5>PRODUCT MANAGEMENT</h5>
               <div id="hide2">
                   <p class="clickable2">Planning and development is iterative. 
@@ -112,16 +112,16 @@
         </div>
       <div class="container text-center">
         <div class="social-media">
-          <img src="/resources/icons/behance.png">
-          <img src="/resources/icons/dribble.png">
-          <img src="/resources/icons/facebook.png">
-          <img src="/resources/icons/flickr.png">
-          <img src="/resources/icons/g_plus.png">
-          <img src="/resources/icons/pinterest.png">
-          <img src="/resources/icons/skype.png">
-          <img src="/resources/icons/stumble_upon.png">
-          <img src="/resources/icons/twitter.png">
-          <img src="/resources/icons/you_tube.png">
+          <img src="./resources/icons/behance.png">
+          <img src="./resources/icons/dribble.png">
+          <img src="./resources/icons/facebook.png">
+          <img src="./resources/icons/flickr.png">
+          <img src="./resources/icons/g_plus.png">
+          <img src="./resources/icons/pinterest.png">
+          <img src="./resources/icons/skype.png">
+          <img src="./resources/icons/stumble_upon.png">
+          <img src="./resources/icons/twitter.png">
+          <img src="./resources/icons/you_tube.png">
        </div>
        <footer>DELANI STUDIO <br> &copy2019</footer>
       </div>
